src/objects/ChemoSummaryRegimenDetail__c.object
<CustomObject>
    <fields>
        <fullName>Chemo_Regimen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chemo Regimen</label>
        <referenceTo>Chemo_Regimen__c</referenceTo>
        <relationshipLabel>ChemoSummaryRegimenDetail</relationshipLabel>
        <relationshipName>ChemoSummaryRegimenDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chemo_Summary_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chemo Summary Form</label>
        <referenceTo>Chemo_Summary_Form__c</referenceTo>
        <relationshipLabel>ChemoSummaryRegimenDetail</relationshipLabel>
        <relationshipName>ChemoSummaryRegimenDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Therapy__c</fullName>
        <label>First Date of Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Therapy__c</fullName>
        <label>Last Date of Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_End_Reasons__c</fullName>
        <label>Treatment End Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment completed per protocol criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease progression, relapse during active treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity/side effects/complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal after beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal prior to beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other complicating disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death during treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient declared ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ChemoSummaryRegimenDetail</label>
    <nameField>
        <label>ChemoSummaryRegimenDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChemoSummaryRegimenDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>